--- a/templates/home.html
+++ b/templates/home.html
@@ -38,7 +38,7 @@
         <div class="Home-text">
             <h1 class="Home-heading">Get your Food<br> Delivery at your<br> Doorstep</h1>
             <p class="Home-para">Check the website and get our ice cream, snacks,<br>
-                drinks, pastries van in 10 minutes.</p>
+                drinks, pastries in 10 minutes.</p>
             <img src="./static/Assets/Images/food-delivery-rider.png" class="Home-text-img"></img>
             <a href="{{ url_for('signup') }}"><button class="home-get-started">Get Started</button></a> 
         </div>
