--- a/static/CSS/home.css
+++ b/static/CSS/home.css
@@ -14,6 +14,9 @@ body{
     padding-bottom: 30px;
     width: 100vw;
 }
+.header-button{
+    color: #fff !important;
+}
 @media all and (min-width:1400px) {
     .Front{
         padding: 30px calc(50% - 700px);
