--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -52,66 +52,63 @@
             
 
 
-            <section class="About">
-                <div class="Team-members">
-                    <h2>Our Team</h2>
-                    <table class="team-table">
-                        <thead>
-                            <tr>
-                                <th>Roll Number</th>
-                                <th>First Name</th>
-                                <th>Last Name</th>
-                                <th>Email ID</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>22110050</td>
-                                <td>Birudugadda</td>
-                                <td>Srivibhav</td>
-                                <td>birudugadda.srivibhav@iitgn.ac.in</td>
-                            </tr>
-                            <tr>
-                                <td>22110260</td>
-                                <td>Srivathsa</td>
-                                <td>Vamsi</td>
-                                <td>vamsi.srivathsa@iitgn.ac.in</td>
-                            </tr>
-                            <tr>
-                                <td>22110124</td>
-                                <td>Sriman</td>
-                                <td>Reddy</td>
-                                <td>kondam.reddy@iitgn.ac.in</td>
-                            </tr>
-                            <tr>
-                                <td>22110162</td>
-                                <td>Nikhilesh</td>
-                                <td>Myanapuri</td>
-                                <td>nikhilesh.myanapuri@iitgn.ac.in</td>
-                            </tr>
-                            <tr>
-                                <td>20110106</td>
-                                <td>Shriyash</td>
-                                <td>Mandavekar</td>
-                                <td>mandavekar.shriyash@iitgn.ac.in</td>
-                            </tr>
-                            <tr>
-                                <td>20110071</td>
-                                <td>Haikoo</td>
-                                <td>Khandor</td>
-                                <td>haikoo.ashok@iitgn.ac.in</td>
-                            </tr>
-                            <tr>
-                                <td>20110104</td>
-                                <td>Madhav</td>
-                                <td>Kanda</td>
-                                <td>madhav.kanda@iitgn.ac.in</td>
-                            </tr>
-                        </tbody>
-                    </table>
+    </div>
+
+    <div1 class="About">
+        <div class="About">
+            <br>
+            <h2 class="text-center mb-3">Team Details</h2>
+            <hr>    
+            <div class="Team-members">
+                <table class="team-table">
+                    <thead class="thead-dark">
+                        <tr>
+                            <th>{{table['col1']}}</th>
+                            <th>{{table['col2']}}</th>
+                            <th>{{table['col3']}}</th>
+                            <th>{{table['col4']}}</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for student in student_details %}
+                        <tr>
+                            <td>{{student['col1']}}</td>
+                            <td>{{student['col2']}}</td>
+                            <td>{{student['col3']}}</td>
+                            <td>{{student['col4']}}</td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+        <br>
+        <hr>
+        <div class="container">
+            <form role="search" method="POST">
+                <div class="row">
+                    <div class="co-md-4">
+                        <div class="input-group mb-3">
+                            <label class="input-group-text" for="inputGroupSelect01">Column to rename</label>
+                            <select class="form-select" id="inputGroupSelect01" name="col_name">
+                                <option>{{table['col1']}}</option>
+                                <option>{{table['col2']}}</option>
+                                <option>{{table['col3']}}</option>
+                                <option>{{table['col4']}}</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <input class="form-control me-2" type="search" placeholder="Column Name" aria-label="Column Name" name="new_name" value="">
+                    </div>
+                    <div class="col-md-4">
+                        <button class="btn btn-outline-primary" type="submit">Rename Column Name</button>
+                    </div>
                 </div>
-            </section>
-            
+            </form>
+        </div>
+    </div1>            
     <script>
         function goBack() {
           window.history.back();
