--- a/templates/customers/userdetails.html
+++ b/templates/customers/userdetails.html
@@ -7,7 +7,7 @@
 <body>
     <h1>User Details</h1>
     <h2>Account Details</h2>
-    <a href="http://127.0.0.1:5000/dashboard" class="btn-back">Back</a>
+    <button onclick="goBack()" class="btn-back">Back</button>
 
     <table>
         <tr>
@@ -95,5 +95,11 @@
         </tr>
         {% endfor %}
     </table>
+
+    <script>
+        function goBack() {
+        window.history.back();
+      }
+    </script>
 </body>
 </html>
