--- a/templates/customers/restaurants.html
+++ b/templates/customers/restaurants.html
@@ -31,9 +31,7 @@
   <body>
     <div class="container my-5">
       <h1 class="text-center mb-4">Restaurants</h1>
-      <a href="http://127.0.0.1:5000/dashboard" class="btn btn-secondary mb-3"
-        >Back</a
-      >
+      <button onclick="goBack()" class="btn btn-secondary mb-3">Back</button>
 
       <div class="row">
         {% for restaurant in restaurants %}
@@ -59,5 +57,10 @@
         {% endfor %}
       </div>
     </div>
+    <script>
+      function goBack() {
+        window.history.back();
+      }
+    </script>
   </body>
 </html>
