--- a/templates/delivery/index.html
+++ b/templates/delivery/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="../static/CSS/userdetails.css" />
 </head>
 <body>
-    <a href="http://127.0.0.1:5000" class="btn-back">Log Out</a>
+    <button onclick="goBack()" class="btn-back">Log Out</button>
     <h1>User Details</h1>
     <table>
         <tr>
@@ -62,6 +62,10 @@
         {% endfor %}
     </table>
 
-
+    <script>
+        function goBack() {
+            window.history.back();
+        }
+    </script>
 </body>
 </html>
