--- a/templates/delivery/index.html
+++ b/templates/delivery/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="../static/CSS/userdetails.css" />
 </head>
 <body>
-    <button onclick="goBack()" class="btn-back">Log Out</button>
+    <a href="http://127.0.0.1:5000" class="btn-back">Log Out</a>
     <h1>User Details</h1>
     <table>
         <tr>
@@ -62,10 +62,6 @@
         {% endfor %}
     </table>
 
-    <script>
-        function goBack() {
-            window.history.back();
-        }
-    </script>
+    
 </body>
 </html>
