--- a/templates/restaurants/details.html
+++ b/templates/restaurants/details.html
@@ -76,7 +76,7 @@
     </style>
   </head>
   <body>
-    <button onclick="goBack()" class="btn-back">Log Out</button>
+    <a href="http://127.0.0.1:5000" class="btn-back">Log Out</a>
     <div class="container">
       <div class="restaurant-card">
         <h2>{{ restaurant_details.restaurant_name }}</h2>
@@ -153,10 +153,6 @@
         </div>
       </div>
     </div>
-    <script>
-      function goBack() {
-        window.history.back();
-      }
-    </script>
+    
   </body>
 </html>
