--- a/templates/login.html
+++ b/templates/login.html
@@ -13,7 +13,7 @@
     <div class="container">
       <h1>Login</h1>
       <form action="#" method="POST">
-        <input type="email" name="useremail" placeholder="Email" required />
+        <input type="text" name="useremail" placeholder="Email" required />
         <input
           type="password"
           name="password"
