--- a/templates/home.html
+++ b/templates/home.html
@@ -23,10 +23,7 @@
                                     <a href="{{ url_for('aboutus') }}" class='text-wrapper-2 header-button'>About us</a>
                                 </li>
                                 <li class="has-child">
-                                    <a href="{{ url_for('aboutus') }}" class='text-wrapper-2 header-button'>About Us</a>
-                                </li>
-                                <li class="has-child">
-                                    <a href="{{ url_for('login') }}" class='text-wrapper-2 header-button'>Login</a>
+                                    <a href="{{ url_for('googlelogin') }}" class='text-wrapper-2 header-button'>Login</a>
                                 </li>
                                 <li class="has-child">
                                     <a href="{{ url_for('signup') }}" class='text-wrapper-2 header-button'>Signup</a>
