--- a/static/CSS/aboutus.css
+++ b/static/CSS/aboutus.css
@@ -90,13 +90,16 @@ body {
 
 .partner-executives {
     display: flex;
-    justify-content: space-around; 
+    justify-content: space-around;
+    margin-top: 20px;
+    flex-wrap: wrap;
 }
 
 .partner {
-    width: 250px; 
-    height: 150px; 
-    background-color: #e29e50; 
+    width: 45%;
+    max-width: 250px;
+    height: 150px;
+    background-color: #e29e50;
     border-radius: 10px;
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -117,10 +120,19 @@ body {
     text-align: center;
 }
 
+.table-container {
+    overflow-x: auto;
+}
+
+.table-scroll {
+    overflow-x: scroll;
+}
+
 .team-table {
     width: 100%;
     border-collapse: collapse;
     margin-top: 20px;
+    overflow-x: auto;
 }
 
 .team-table th,
@@ -145,5 +157,22 @@ body {
 
 .team-table tr:hover {
     background-color: #eaddae;
+}
+
+@media only screen and (max-width: 768px) {
+    .menu-ul li {
+        display: block;
+        margin-bottom: 10px;
+    }
+
+    .about-us-section {
+        text-align: justify;
+        margin-bottom: 20px;
+    }
+
+    .partner {
+        width: 100%;
+        max-width: none;
+    }
 }
 
