--- a/templates/customers/index.html
+++ b/templates/customers/index.html
@@ -12,7 +12,7 @@
       body {
         background-color: #f5f5f5;
         font-family: "Open Sans", sans-serif;
-        padding-bottom: 60px; /* Add bottom padding for footer */
+        /* padding-bottom: 60px; Add bottom padding for footer */
       }
       .cuisine-card {
         background-color: #fff;
@@ -38,7 +38,7 @@
       header {
         background-color: #4f46e5;
         color: white;
-        padding: 1rem;
+        padding: 2rem;
         text-align: center;
         /* Remove fixed positioning */
       }
@@ -144,10 +144,9 @@
       <ul class="footer-links">
         <li><a href="{{ url_for('aboutus') }}">About Us</a></li>
         <!-- <li><a href="#">Terms of Service</a></li>
-      <li><a href="#">Privacy Policy</a></li> -->
+        <li><a href="#">Privacy Policy</a></li> -->
       </ul>
     </footer>
-
     <script>
       // Set current year dynamically
       document.getElementById("currentYear").textContent =
